--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
     implementation 'commons-io:commons-io:2.6'
+    implementation "com.github.bumptech.glide:glide:3.8.0"
 
 }
